Replace image_tags with img tags and data-lazy attribute and use background_image helper for mobile screenshots
to improve page loading time and use relative bg paths for the build

--- a/source/partials/cases/_alchemy.html.erb
+++ b/source/partials/cases/_alchemy.html.erb
@@ -19,50 +19,50 @@
           <div>
             <div class="grid-x align-center align-middle grid-padding-y">
               <div class="cell small-6 large-5 primary-image">
-                <%= image_tag 'alchemy/alchemy-pages-2-new.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-pages-2-new.jpg') %>" alt="alchemy-pages-2-new.jpg">
               </div>
               <div class="cell small-5 large-4 secondary-image">
-                <%= image_tag 'alchemy/alchemy-pages-2-old.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-pages-2-old.jpg') %>" alt="alchemy-pages-2-old.jpg">
               </div>
             </div>
           </div>
           <div>
             <div class="grid-x align-center align-middle grid-padding-y">
               <div class="cell small-11 medium-9 xlarge-7 secondary-image p-bottom-0">
-                <%= image_tag 'alchemy/alchemy-elements-2-old.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-elements-2-old.jpg') %>" alt="alchemy-elements-2-old.jpg">
               </div>
               <div class="cell medium-11 xlarge-9 primary-image p-top-0">
-                <%= image_tag 'alchemy/alchemy-elements-2-new.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-elements-2-new.jpg') %>" alt="alchemy-elements-2-new.jpg">
               </div>
             </div>
           </div>
           <div>
             <div class="grid-x align-center align-middle grid-padding-y">
               <div class="cell small-5 large-4 secondary-image">
-                <%= image_tag 'alchemy/alchemy-elements-1-old.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-elements-1-old.jpg') %>" alt="alchemy-elements-1-old.jpg">
               </div>
               <div class="cell small-6 large-5 primary-image">
-                <%= image_tag 'alchemy/alchemy-elements-1-new.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-elements-1-new.jpg') %>" alt="alchemy-elements-1-new.jpg">
               </div>
             </div>
           </div>
           <div>
             <div class="grid-x align-center align-middle grid-padding-y">
               <div class="cell small-11 medium-9 xlarge-7 secondary-image p-bottom-0">
-                <%= image_tag 'alchemy/alchemy-tags-old.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-tags-old.jpg') %>" alt="alchemy-tags-old.jpg">
               </div>
               <div class="cell medium-11 xlarge-9 primary-image p-top-0">
-                <%= image_tag 'alchemy/alchemy-tags-new.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-tags-new.jpg') %>" alt="alchemy-tags-new.jpg">
               </div>
             </div>
           </div>
           <div>
             <div class="grid-x align-center align-middle grid-padding-y">
               <div class="cell small-11 medium-9 xlarge-7 secondary-image p-bottom-0">
-                <%= image_tag 'alchemy/alchemy-pictures-old.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-pictures-old.jpg') %>" alt="alchemy-pictures-old.jpg">
               </div>
               <div class="cell medium-11 xlarge-9 primary-image p-top-0">
-                <%= image_tag 'alchemy/alchemy-pictures-new.jpg' %>
+                <img data-lazy="<%= image_path('alchemy/alchemy-pictures-new.jpg') %>" alt="alchemy-pictures-new.jpg">
               </div>
             </div>
           </div>
