--- a/source/partials/cases/_beyond.html.erb
+++ b/source/partials/cases/_beyond.html.erb
@@ -10,17 +10,17 @@
             <div class="grid-x align-center">
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/beyond/beyond-0.png')"></div>
+                <div class="device--mobile__image" style="<%= background_image('beyond/beyond-0.png') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/beyond/beyond-1.png')"></div>
+                <div class="device--mobile__image" style="<%= background_image('beyond/beyond-1.png') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/beyond/beyond-2.png')"></div>
+                <div class="device--mobile__image" style="<%= background_image('beyond/beyond-2.png') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
             </div>
@@ -29,12 +29,12 @@
             <div class="grid-x align-center">
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/beyond/beyond-3.png')"></div>
+                <div class="device--mobile__image" style="<%= background_image('beyond/beyond-3.png') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/beyond/beyond-4.png')"></div>
+                <div class="device--mobile__image" style="<%= background_image('beyond/beyond-4.png') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
             </div>
