--- a/source/partials/cases/_freud.html.erb
+++ b/source/partials/cases/_freud.html.erb
@@ -14,14 +14,14 @@
             <hr />
             <div class="device mobile right">
               <%= partial 'partials/device_mobile_header' %>
-              <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile1.jpg')"></div>
+              <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile1.jpg') %>"></div>
               <%= partial 'partials/device_mobile_footer' %>
             </div>
           </div>
           <div>
             <div class="device desktop">
               <%= partial 'partials/device_desktop' %>
-              <%= image_tag 'freud/freud2.jpg' %>
+              <img data-lazy="<%= image_path('freud/freud2.jpg') %>", alt="freud2.jpg">
             </div>
             <hr />
           </div>
@@ -29,17 +29,17 @@
             <div class="grid-x align-center">
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile2.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile2.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile3.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile3.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile4.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile4.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
             </div>
@@ -47,48 +47,48 @@
           <div>
             <div class="device desktop right">
               <%= partial 'partials/device_desktop' %>
-              <%= image_tag 'freud/freud3.jpg' %>
+              <img data-lazy="<%= image_path('freud/freud3.jpg') %>", alt="freud3.jpg">
             </div>
             <hr />
             <div class="device mobile left">
               <%= partial 'partials/device_mobile_header' %>
-              <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile8.jpg')"></div>
+              <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile8.jpg') %>"></div>
               <%= partial 'partials/device_mobile_footer' %>
             </div>
           </div>
           <div>
             <div class="device desktop left">
               <%= partial 'partials/device_desktop' %>
-              <%= image_tag 'freud/freud4.jpg' %>
+              <img data-lazy="<%= image_path('freud/freud4.jpg') %>", alt="freud4.jpg">
             </div>
             <hr />
             <div class="device mobile right">
               <%= partial 'partials/device_mobile_header' %>
-              <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile5.jpg')"></div>
+              <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile5.jpg') %>"></div>
               <%= partial 'partials/device_mobile_footer' %>
             </div>
           </div>
           <div>
             <div class="device desktop right">
               <%= partial 'partials/device_desktop' %>
-              <%= image_tag 'freud/freud5.jpg' %>
+              <img data-lazy="<%= image_path('freud/freud5.jpg') %>", alt="freud5.jpg">
             </div>
             <hr />
             <div class="device mobile left">
               <%= partial 'partials/device_mobile_header' %>
-              <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile6.jpg')"></div>
+              <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile6.jpg') %>"></div>
               <%= partial 'partials/device_mobile_footer' %>
             </div>
           </div>
           <div>
             <div class="device desktop left">
               <%= partial 'partials/device_desktop' %>
-              <%= image_tag 'freud/freud6.jpg' %>
+              <img data-lazy="<%= image_path('freud/freud6.jpg') %>", alt="freud6.jpg">
             </div>
             <hr />
             <div class="device mobile right">
               <%= partial 'partials/device_mobile_header' %>
-              <div class="device--mobile__image" style="background-image: url('../images/freud/freud-mobile7.jpg')"></div>
+              <div class="device--mobile__image" style="<%= background_image('freud/freud-mobile7.jpg') %>"></div>
               <%= partial 'partials/device_mobile_footer' %>
             </div>
           </div>
