--- a/source/partials/cases/_insufflator.html.erb
+++ b/source/partials/cases/_insufflator.html.erb
@@ -7,8 +7,8 @@
       <div class="cell medium-11 large-10">
         <div class="carousel">
           <div><%= image_tag 'insufflator/insufflator-01.png' %></div>
-          <div><%= image_tag 'insufflator/insufflator-02.png' %></div>
-          <div><%= image_tag 'insufflator/insufflator-03.png' %></div>
+          <div><img data-lazy="<%= image_path('insufflator/insufflator-02.png') %>", alt="insufflator-02"></div>
+          <div><img data-lazy="<%= image_path('insufflator/insufflator-03.png') %>", alt="insufflator-03"></div>
         </div>
       </div>
     </div>
