--- a/source/partials/cases/_typo.html.erb
+++ b/source/partials/cases/_typo.html.erb
@@ -7,22 +7,22 @@
       <div class="cell medium-11 large-10">
         <div class="carousel">
           <div><%= image_tag 'typo/typo-title.jpg' %></div>
-          <div><%= image_tag 'typo/typo-01.jpg' %></div>
-          <div><%= image_tag 'typo/typo-02.jpg' %></div>
-          <div><%= image_tag 'typo/typo-03.jpg' %></div>
-          <div><%= image_tag 'typo/typo-04.jpg' %></div>
-          <div><%= image_tag 'typo/typo-05.jpg' %></div>
-          <div><%= image_tag 'typo/typo-06.jpg' %></div>
-          <div><%= image_tag 'typo/typo-07.jpg' %></div>
-          <div><%= image_tag 'typo/typo-08.jpg' %></div>
-          <div><%= image_tag 'typo/typo-09.jpg' %></div>
-          <div><%= image_tag 'typo/typo-10.jpg' %></div>
-          <div><%= image_tag 'typo/typo-11.jpg' %></div>
-          <div><%= image_tag 'typo/typo-12.jpg' %></div>
-          <div><%= image_tag 'typo/typo-13.jpg' %></div>
-          <div><%= image_tag 'typo/typo-14.jpg' %></div>
-          <div><%= image_tag 'typo/typo-15.jpg' %></div>
-          <div><%= image_tag 'typo/typo-16.jpg' %></div>
+          <div><img data-lazy="<%= image_path('typo/typo-01.jpg') %>", alt="typo-01.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-02.jpg') %>", alt="typo-02.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-03.jpg') %>", alt="typo-03.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-04.jpg') %>", alt="typo-04.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-05.jpg') %>", alt="typo-05.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-06.jpg') %>", alt="typo-06.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-07.jpg') %>", alt="typo-07.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-08.jpg') %>", alt="typo-08.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-09.jpg') %>", alt="typo-09.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-10.jpg') %>", alt="typo-10.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-11.jpg') %>", alt="typo-11.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-12.jpg') %>", alt="typo-12.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-13.jpg') %>", alt="typo-13.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-14.jpg') %>", alt="typo-14.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-15.jpg') %>", alt="typo-15.jpg"></div>
+          <div><img data-lazy="<%= image_path('typo/typo-16.jpg') %>", alt="typo-16.jpg"></div>
         </div>
       </div>
     </div>
