--- a/source/partials/cases/_majestic.html.erb
+++ b/source/partials/cases/_majestic.html.erb
@@ -3,24 +3,24 @@
     <div class="grid-x grid-padding-x align-center text-center case-title">
       <h2 class="cell medium-10">Majestic Casual app</h2>
     </div>
-    <div class="grid-x align-center case-pictures">
+    <div class="grid-x grid-padding-x align-center case-pictures">
       <div class="cell medium-11 large-10">
         <div class="carousel">
           <div>
             <div class="grid-x align-center">
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/majestic/majestic-0.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('majestic/majestic-0.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/majestic/majestic-1.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('majestic/majestic-1.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/majestic/majestic-2.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('majestic/majestic-2.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
             </div>
@@ -29,12 +29,12 @@
             <div class="grid-x align-center">
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/majestic/majestic-3.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('majestic/majestic-3.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
               <div class="device mobile cell large-3">
                 <%= partial 'partials/device_mobile_header' %>
-                <div class="device--mobile__image" style="background-image: url('../images/majestic/majestic-4.jpg')"></div>
+                <div class="device--mobile__image" style="<%= background_image('majestic/majestic-4.jpg') %>"></div>
                 <%= partial 'partials/device_mobile_footer' %>
               </div>
             </div>
