--- a/source/stylesheets/globals/_variables.sass
+++ b/source/stylesheets/globals/_variables.sass
@@ -2,6 +2,7 @@
 $c-black: #2C313F
 $c-white: #fff
 $c-primary: #1428F0
+$c-link-hover-bg: rgba($c-primary, .1)
 $c-secondary: #F59B00
 $c-grey-base: scale-color($c-black, $lightness: 50%)
 $c-grey-dark: scale-color($c-black, $lightness: 20%)
