--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -1,4 +1,4 @@
-<% link_to "https://bjoern-richter.com", class: 'logo' do %>
+<% link_to "http://bjoern-richter.com", class: 'logo' do %>
   <div class="grid-x align-middle">
     <%= image_tag "bjoern-richter-logo.svg", class: "cell shrink" %>
     <p class="cell auto text-bold">Björn<span>|</span>Richter<br />Concept/UX/UI<span>|</span>Designer<br />Frontend<span>|</span>Developer</p>
