Wrap timespan in vita into p tag
to fix iOS Safari bug where timespan text was partly colored

--- a/source/partials/_vita.html.erb
+++ b/source/partials/_vita.html.erb
@@ -6,31 +6,31 @@
           <h2>Experience</h2>
           <li>
             <hr>
-            <small>04/2015 – Today</small>
+            <p class="timespan"><small>04/2015 – Today</small></p>
             <h5 class="text-primary">Product Designer, Frontend Developer</h5>
             <p class="text-small">Concept, UX, UI, frontend development, CMS templating<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', :target => 'blank', class: "text-grey" %></strong></p>
           </li>
           <li>
             <hr>
-            <small>04/2014 – 09/2014</small>
+            <p class="timespan"><small>04/2014 – 09/2014</small></p>
             <h5 class="text-primary">Design Intern</h5>
             <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ Edenspiekermann AG, Berlin', 'http://www.edenspiekermann.com', :target => 'blank', class: "text-grey" %></strong></p>
           </li>
           <li>
             <hr>
-            <small>07/2010 – 03/2014</small>
+            <p class="timespan"><small>07/2010 – 03/2014</small></p>
             <h5 class="text-primary">Interface Designer (part-time)</h5>
             <p class="text-small">Interface design for medical devices, webdesign, communication design<br /><strong class="text-grey">@ World of Medicine GmbH, Berlin</strong></p>
           </li>
           <li>
             <hr>
-            <small>11/2007 – 02/2010</small>
+            <p class="timespan"><small>11/2007 – 02/2010</small></p>
             <h5 class="text-primary">Graphic Designer + Final Artist</h5>
             <p class="text-small">Packaging design, communication design and final art for computer games<br /><strong class="text-grey">@ dtp entertainment AG, Hamburg</strong></p>
           </li>
           <li>
             <hr>
-            <small>07/2007 – 10/2007</small>
+            <p class="timespan"><small>07/2007 – 10/2007</small></p>
             <h5 class="text-primary">Media Designer/Operator</h5>
             <p class="text-small">Print design, print production<br /><strong class="text-grey">@ Nordbahn gGmbH – Printery</strong></p>
           </li>
@@ -42,20 +42,20 @@
           <h2>Education</h2>
           <li>
             <hr>
-            <small>12/2010 – 04/2015</small>
+            <p class="timespan"><small>12/2010 – 04/2015</small></p>
             <h5 class="text-primary">Bachelor of Arts – Interface Design</h5>
             <p class="text-small"><strong><%= link_to '@ University of Applied Sciences Potsdam', 'http://www.fh-potsdam.de', :target => 'blank', class: "text-grey" %></strong></p>
           </li>
           <li>
             <hr>
-            <small>04/2010 – 07/2010</small>
+            <p class="timespan"><small>04/2010 – 07/2010</small></p>
             <h5 class="text-primary">Training Digital Design</h5>
             <p class="text-small">HTML, CSS, Flash, AfterEffects<br />
             <strong><%= link_to '@ Cimdata Media Academy Berlin', 'http://cimdata.de', :target => 'blank', class: "text-grey" %></strong></p>
           </li>
           <li>
             <hr>
-            <small>04/2004 – 07/2007</small>
+            <p class="timespan"><small>04/2004 – 07/2007</small></p>
             <h5 class="text-primary">Media Designer – Digital + Print (IHK)</h5>
             <p class="text-small">Nordbahn gGmbH<br />Print design + print production<br />
             <strong><%= link_to '@ OSZ Druck- und Medientechnik, Berlin', 'http://www.ernst-litfass-schule.de', :target => 'blank', class: "text-grey" %></strong></p>
