--- a/source/stylesheets/globals/_typo.sass
+++ b/source/stylesheets/globals/_typo.sass
@@ -25,6 +25,9 @@ h1, h2
 p, li
   font-size: $fs-base
 
+.timespan
+  margin-bottom: 0
+
 p a
   transition: box-shadow .2s, background-color .2s, transform .5s, border-radius .4s
   display: inline-block
