--- a/source/partials/_vita.html.erb
+++ b/source/partials/_vita.html.erb
@@ -1,4 +1,4 @@
-<section class="vita">
+<section id="vita" class="vita">
   <div class="grid-container">
     <div class="grid-x grid-padding-x align-center">
       <div class="cell medium-6 large-5">
