--- a/source/stylesheets/elements/_header.sass
+++ b/source/stylesheets/elements/_header.sass
@@ -1,15 +1,19 @@
 header
   position: absolute
+  z-index: 100
   padding: 1rem $section-padding-x
+  width: 100%
 
   .logo
     display: block
 
   img, p
     display: block
+    float: left
 
   img
     height: calc(3.25rem + .5vw)
+    transform: translateY(-7%)
 
   p
     margin: 0 $sp-base
