--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -7,8 +7,10 @@
 @import 'globals/typo';
 
 @import 'elements/header';
+@import 'elements/menu_button';
+@import 'elements/navigation';
 @import 'elements/slick-slider';
-@import 'elements/grid_lines';
+// @import 'elements/grid_lines';
 @import 'elements/devices';
 @import 'elements/cases';
 @import 'elements/footer';
