--- a/source/stylesheets/globals/_layout.sass
+++ b/source/stylesheets/globals/_layout.sass
@@ -1,3 +1,6 @@
+.no-scroll
+  overflow: hidden !important
+
 *
   box-sizing: border-box
 
@@ -12,6 +15,8 @@ section, footer
 
 .selfie
   background-color: #FFFBF3
+  position: relative
+  z-index: 10
   overflow: hidden
 
   img
