--- a/source/stylesheets/globals/_typo.sass
+++ b/source/stylesheets/globals/_typo.sass
@@ -29,7 +29,7 @@ p, li
   margin-bottom: 0
 
 p a
-  transition: box-shadow .2s, background-color .2s, transform .5s, border-radius .4s
+  transition: box-shadow .2s, background-color .2s, transform .5s, border-radius .4s, color .3s
   display: inline-block
   border-radius: 0 200% 0 0
 
