Disable auto phone number detecting in iOS Safari (vita)

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Björn Richter is a berlin based UX/UI designer and frontend developer with passion for software interfaces, the web and typography.">
     <meta name="author" content="Björn Richter">
+    <meta name = "format-detection" content = "telephone=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Björn Richter – Digital Product Designer and Frontend Developer" %></title>
     <%= stylesheet_link_tag "site" %>
