--- a/source/stylesheets/globals/_typo.sass
+++ b/source/stylesheets/globals/_typo.sass
@@ -27,6 +27,9 @@ p, li
 
 .timespan
   margin-bottom: 0
+  pointer-events: none
+  text-decoration: none
+  color: $c-black
 
 p a
   transition: box-shadow .2s, background-color .2s, transform .5s, border-radius .4s, color .3s
