--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,6 +9,7 @@
     <meta name = "format-detection" content = "telephone=no">
     <!-- Use the title from a page's frontmatter if it has one -->
     <title><%= current_page.data.title || "Björn Richter – Digital Product Designer and Frontend Developer" %></title>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.5.16/dist/vue.js"></script>
     <%= stylesheet_link_tag "site" %>
     <%= javascript_include_tag "site" %>
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600,800" rel="stylesheet">
