--- a/source/partials/_vita.html.erb
+++ b/source/partials/_vita.html.erb
@@ -3,7 +3,7 @@
     <div class="grid-x grid-padding-x align-center">
       <div class="cell medium-6 large-5">
         <ul>
-          <h2>Experience</h2>
+          <h2>Work</h2>
           <li>
             <hr>
             <p class="timespan"><small>04/2015 – Today</small></p>
