--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -16,6 +16,7 @@
       <ul class="cell">
         <li><%= link_to "About", "#about", class: "scroll-link" %></li>
         <li><%= link_to "Work", "#work", class: "scroll-link" %></li>
+        <li><%= link_to "Skills", "#skills", class: "scroll-link" %></li>
         <li><%= link_to "Vita", "#vita", class: "scroll-link" %></li>
       </ul>
     </div>
