--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -14,3 +14,5 @@
 @import 'elements/devices';
 @import 'elements/cases';
 @import 'elements/footer';
+@import 'elements/skills';
+@import 'elements/selfie';
