--- a/source/partials/_skills.html.erb
+++ b/source/partials/_skills.html.erb
@@ -1,6 +1,6 @@
 <section id="skills" class="p-bottom-0">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-center text-center case-title">
+    <div class="grid-x grid-padding-x align-center text-center">
       <h2 class="cell medium-10">Experience and Skills</h2>
       <ul class="skills-filter align-center">
         <li v-for="category in categories" class="skill-filter" v-bind:class="{ active: active === category }">
