Mark external links with an arrow symbol at the and

--- a/source/partials/_vita.html.erb
+++ b/source/partials/_vita.html.erb
@@ -8,13 +8,13 @@
             <hr>
             <p class="timespan"><small>04/2015 – Today</small></p>
             <h5 class="text-primary">Product Designer, Frontend Developer</h5>
-            <p class="text-small">Concept, UX, UI, frontend development, CMS templating<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', :target => 'blank', class: "text-grey" %></strong></p>
+            <p class="text-small">Concept, UX, UI, frontend development, CMS templating<br /><strong><%= link_to '@ bitspire, Berlin', 'http://bitspire.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
             <p class="timespan"><small>04/2014 – 09/2014</small></p>
             <h5 class="text-primary">Design Intern</h5>
-            <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ Edenspiekermann AG, Berlin', 'http://www.edenspiekermann.com', :target => 'blank', class: "text-grey" %></strong></p>
+            <p class="text-small">Concept, UX, UI, frontend development<br /><strong><%= link_to '@ Edenspiekermann AG, Berlin', 'http://www.edenspiekermann.com', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
@@ -44,21 +44,21 @@
             <hr>
             <p class="timespan"><small>12/2010 – 04/2015</small></p>
             <h5 class="text-primary">Bachelor of Arts – Interface Design</h5>
-            <p class="text-small"><strong><%= link_to '@ University of Applied Sciences Potsdam', 'http://www.fh-potsdam.de', :target => 'blank', class: "text-grey" %></strong></p>
+            <p class="text-small"><strong><%= link_to '@ University of Applied Sciences Potsdam', 'http://www.fh-potsdam.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
             <p class="timespan"><small>04/2010 – 07/2010</small></p>
             <h5 class="text-primary">Training Digital Design</h5>
             <p class="text-small">HTML, CSS, Flash, AfterEffects<br />
-            <strong><%= link_to '@ Cimdata Media Academy Berlin', 'http://cimdata.de', :target => 'blank', class: "text-grey" %></strong></p>
+            <strong><%= link_to '@ Cimdata Media Academy Berlin', 'http://cimdata.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
           <li>
             <hr>
             <p class="timespan"><small>04/2004 – 07/2007</small></p>
             <h5 class="text-primary">Media Designer – Digital + Print (IHK)</h5>
             <p class="text-small">Nordbahn gGmbH<br />Print design + print production<br />
-            <strong><%= link_to '@ OSZ Druck- und Medientechnik, Berlin', 'http://www.ernst-litfass-schule.de', :target => 'blank', class: "text-grey" %></strong></p>
+            <strong><%= link_to '@ OSZ Druck- und Medientechnik, Berlin', 'http://www.ernst-litfass-schule.de', target: 'blank', class: "text-grey external" %></strong></p>
           </li>
         </ul>
       </div>
