--- a/source/stylesheets/globals/_typo.sass
+++ b/source/stylesheets/globals/_typo.sass
@@ -47,6 +47,13 @@ p a
     background-color: $c-white
     border-radius: 0
 
+a.external:after
+  content: "\2197"
+  font-size: 1.3ex
+  opacity: .6
+  margin-left: .1em
+  font-weight: $fw-regular
+
 .text-caps
   text-transform: uppercase
   letter-spacing: 0.05em
