Minor layout optimizations of skills section

--- a/source/partials/_header.html.erb
+++ b/source/partials/_header.html.erb
@@ -15,7 +15,7 @@
     <div class="inpage-nav__container grid-x align-middle">
       <ul class="cell">
         <li><%= link_to "About", "#about", class: "scroll-link" %></li>
-        <li><%= link_to "Work", "#work", class: "scroll-link" %></li>
+        <li><%= link_to "Work", "#projects", class: "scroll-link" %></li>
         <li><%= link_to "Skills", "#skills", class: "scroll-link" %></li>
         <li><%= link_to "Vita", "#vita", class: "scroll-link" %></li>
       </ul>
