--- a/source/partials/cases/_senshemp.html.erb
+++ b/source/partials/cases/_senshemp.html.erb
@@ -1,7 +1,9 @@
 <section class="bg-green-pastel">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-center text-center case-title">
-      <h2 class="cell medium-10">Senshemp Online Shop</h2>
+    <div class="grid-x grid-padding-x grid-margin-y align-center text-center case-title">
+      <div class="cell medium-10">
+        <h3 class="text-underlined">Senshemp Online Shop</h3>
+      </div>
     </div>
     <div class="grid-x grid-padding-x align-center case-pictures">
       <div class="cell medium-11 large-10">
@@ -36,7 +38,7 @@
       </div>
     </div>
     <div class="grid-x grid-padding-x align-center case-info">
-      <div class="cell mmedium-4 large-3 text-small">
+      <div class="cell medium-4 large-3 text-small">
         <p class="text-small"><small class="text-grey-muted">Context</small><br />2016, bitspire GmbH</p>
       </div>
       <div class="cell medium-8 large-7 text-small">
