--- a/source/stylesheets/elements/_skills.sass
+++ b/source/stylesheets/elements/_skills.sass
@@ -33,7 +33,7 @@
     display: block
     margin: 0 $sp-base
     position: relative
-    font-size: $fs-medium
+    font-size: $fs-base
 
     &:after
       content: ""
