--- a/source/partials/cases/_insufflator.html.erb
+++ b/source/partials/cases/_insufflator.html.erb
@@ -1,7 +1,9 @@
 <section class="bg-blue-pastel">
   <div class="grid-container">
-    <div class="grid-x grid-padding-x align-center text-center case-title">
-      <h2 class="cell medium-10">UI design for a medical device</h2>
+    <div class="grid-x grid-padding-x grid-margin-y align-center text-center case-title">
+      <div class="cell medium-10 ">
+        <h3 class="text-underlined">UI design for a medical device</h3>
+      </div>
     </div>
     <div class="grid-x grid-padding-x align-center case-pictures">
       <div class="cell medium-11 large-10">
