--- a/source/stylesheets/globals/_typo.sass
+++ b/source/stylesheets/globals/_typo.sass
@@ -31,14 +31,15 @@ p, li
   text-decoration: none
   color: $c-black
 
-p a
+p a,
+h4 a
   transition: box-shadow .2s, background-color .2s, transform .5s, border-radius .4s, color .3s
   display: inline-block
   border-radius: 0 200% 0 0
 
   &:hover
     color: $c-primary
-    box-shadow: 0 0 80px 20px $c-link-hover-bg
+    box-shadow: 0 0 60px 20px $c-link-hover-bg
     padding: 2px 8px
     margin: -2px -8px
     transform: translateY(-1px)
@@ -57,6 +58,9 @@ a.external:after
 .text-caps
   text-transform: uppercase
   letter-spacing: 0.05em
+
+.text-medium
+  font-size: $fs-medium
 
 .text-small
   font-size: $fs-small
